# astro-video-player

./: Cargo.toml  LICENSE  README.md
src/: avi.rs  codec.rs  debayer.rs  lib.rs  main.rs  ui.rs  video_format.rs
