[package]
name = "astro-video-player"
description = "Video player for astrophotography SER and AVI files with support for RAW images"
license = "MIT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
repository = "https://github.com/andygrove/astro-video-player"
keywords = ["astrophotography", "video"]
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "debug", "image"] }
tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
ser-io = "0.1.1"
byteorder = "1.4"
structopt = "0.3"

